--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HopeUA/auth.rest"
   }
 }
